eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-api-staging-service
  labels:
    app: app-api-staging
    env: staging
spec:
  selector:
    app: app-api-staging
  ports:
    - protocol: TCP
      port: 8901
      targetPort: 8901
  type: ClusterIP
